package ar.edu.unlp.info.oo2.ej11_Topografias;

public class Agua extends Topografia {

	public double proporcionDeAgua() {
		return 1;
	}


}
