package ar.edu.unlp.info.oo2.ej11_Topografias;

public class Tierra extends Topografia {
	
	public double proporcionDeAgua() {
		return 0;
	}

	
}
